--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
         <h3 class="topTitle">Settings</h3>
 
         <form action="/" method="post" class="settingsForm">
-          <h3>Add Sites</h3>
+          <h3>Add/Update Sites</h3>
 
-          <div>
+          <div class="formGroup">
             <label for="siteName">Site Name</label><br />
             <input type="text" name="siteName" id="siteName" />
           </div>
           <div class="siteNameError"></div>
 
-          <div>
+          <div class="formGroup">
             <label for="siteLink">Site Link</label><br />
             <input type="text" name="siteLink" id="siteLink" />
           </div>
           <div class="siteLinkError"></div>
 
-          <div>
+          <div class="formGroup">
             <input type="submit" value="Add" />
           </div>
         </form>
 
         <form action="/" method="post" class="addwallpaper">
-          <div>
+          <div class="formGroup">
             <label for="imageLink">Image Link</label><br />
             <input type="text" name="imageLink" id="imageLink" />
           </div>
           <div class="imageLinkError"></div>
 
-          <div>
+          <div class="formGroup">
             <input type="submit" value="Add" />
           </div>
         </form>
